tests/bad/empty_format_string_expr.oc
/// fail: Unexpected end of file

def main() {
    let x = `hello: {}`
}